gedcomfy/tests/snapshots/tests__kdl@utf8_specified.ged.snap
---
source: gedcomfy/tests/tests.rs
description: "0 HEAD\r\n1 GEDC\r\n2 VERS 5.5.1\r\n1 CHAR UTF-8\r\n0 TRLR\r\n"
expression: kdl
input_file: gedcomfy/tests/encoding_inputs/utf8_specified.ged
---
HEAD {
    GEDC {
        VERS "5.5.1"
    }
    CHAR "UTF-8"
}
TRLR
