gedcomfy/tests/snapshots/tests__kdl_error@ansel_specified_malformed_atend.ged.snap
---
source: gedcomfy/tests/tests.rs
description: "0 HEAD\r\n1 GEDC\r\n2 VERS 5.5.1\r\n1 CHAR ANSEL\r\n0 SOME t�"
expression: "shared::render(&err)"
input_file: gedcomfy/tests/encoding_inputs/ansel_specified_malformed_atend.ged
---
gedcomfy::error

  × A problem was found in the GEDCOM file
  ├─▶ gedcom::encoding::invalid_data
  │   
  │     × GEDCOM file contained data which was invalid in the detected
  │     │ encoding
  │      ╭─[5:9]
  │    4 │ 1 CHAR ANSEL
  │    5 │ 0 SOME t�
  │      ·         ┬
  │      ·         ╰── this is not valid data for the encoding ANSEL
  │      ╰────
  │   
  │   Advice: gedcom::encoding_reason::header
  │   
  │     ☞ this encoding was used because it was specified in the GEDCOM header
  │      ╭─[4:8]
  │    3 │ 2 VERS 5.5.1
  │    4 │ 1 CHAR ANSEL
  │      ·        ──┬──
  │      ·          ╰── encoding was specified here
  │    5 │ 0 SOME t�
  │      ╰────
  │   
  ├─▶ Invalid data for encoding ANSEL
  ╰─▶ combining character at end of input
