gedcomfy/tests/snapshots/tests__kdl_error@ascii_specified_malformed.ged.snap
---
source: gedcomfy/tests/tests.rs
description: "0 HEAD\r\n1 GEDC\r\n2 VERS 5.5.1\r\n1 CHAR ASCII\r\n0 TEXT HÖÖT\r\n0 TRLR\r\n"
expression: "shared::render(&err)"
---
gedcomfy::error

  × A problem was found in the GEDCOM file
  ├─▶   × GEDCOM file contained data which was invalid in the detected
  │     │ encoding
  │   
  ├─▶ gedcom::encoding::invalid_data
  │   
  │     × Invalid data for encoding ASCII
  │      ╭─[5:9]
  │    4 │ 1 CHAR ASCII
  │    5 │ 0 TEXT HÖÖT
  │      ·         ┬
  │      ·         ╰── this is not valid data for the encoding ASCII
  │    6 │ 0 TRLR
  │      ╰────
  │   
  │   Advice: gedcom::encoding_reason::header
  │   
  │     ☞ this encoding was used because it was specified in the GEDCOM header
  │      ╭─[4:8]
  │    3 │ 2 VERS 5.5.1
  │    4 │ 1 CHAR ASCII
  │      ·        ──┬──
  │      ·          ╰── encoding was set here
  │    5 │ 0 TEXT HÖÖT
  │      ╰────
  │   
  │   Advice: gedcom::possible_encodings
  │   
  │     ☞ the invalid data appears to be valid in other encodings:
  │     │ → HÃ–Ã–T (using Windows-1252)
  │     │ → HÖÖT (using UTF-8)
  │     help: encoding can be chosen explicitly using the `--force-encoding`
  │           option
  │   
  ╰─▶ the byte at index 52 is not ASCII
