gedcomfy/tests/snapshots/tests__kdl_error@unknown.ged.snap
---
source: gedcomfy/tests/tests.rs
description: "0 HEAD\r\n1 FOO X\r\n0 TRLR\r\n"
expression: "format!(\"{:?}\", miette::Report::new(err))"
input_file: gedcomfy/tests/encoding_inputs/unknown.ged
---
  × An error occurred while parsing the GEDCOM file
  ├─▶ Unable to determine version of GEDCOM file
  ╰─▶ GEDCOM file appeared to be syntactically valid, but no version could be found
